--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,11 @@ body {
   color: white;
 }
 
+#home{
+  background-image: url("/img/homepage.JPG");
+  background-size:100% auto;
+}
+
 /* Nav Bar */
 
 #navbar{
@@ -41,10 +46,41 @@ a.current {
 /* Headers */
 #header{
   text-align: center;
+  margin-top: 100px;
+  animation: bounceIn 2s;
+}
+
+#aboutHeader{
+  text-align: center;
+  animation: zoomInDown 2s;
+}
+
+/* Home Styling */
+
+#enterPortfolio{
+display: flex;
+justify-content: center;
+margin-top: 150px;
+opacity: .75;
+}
+
+#enterPortfolio:hover{
+  animation: heartBeat 3s;
+  opacity: .99;
+
+}
+
+input{
+  background-color: rgb(0, 0, 0);
+  opacity: .9;
+  color: white;
+  padding: .75em;
+  border: none;
+  border-radius: 2px;
 }
 
 /* Portfolio Styling */
 .lg-backdrop{
-  background-color:black
+  background-color:black;
 }
 
