--- a/css/styles.css
+++ b/css/styles.css
@@ -123,7 +123,13 @@ text-align: center;
   padding: 30px;
 }
 /* Portfolio Styling */
+#portfolioHeader{
+  text-align: center;
+}
 .lg-backdrop{
   background-color:black;
 }
 
+#sketch{
+  margin-top: 25px;
+}
