--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@
 */
 
 @import url('https://fonts.googleapis.com/css?family=Catamaran');
-
+@import url('https://fonts.googleapis.com/css?family=Rock+Salt');
 
 body {
   background-color: rgb(16, 16, 16);
@@ -86,7 +86,7 @@ a.current {
 #enterPortfolio{
 display: flex;
 justify-content: center;
-margin-top: 150px;
+margin-top: 60px;
 opacity: .75;
 }
 
@@ -96,6 +96,14 @@ opacity: .75;
 
 }
 
+#nikky{
+  text-align: center;
+  margin-top: 320px;
+  font-size: 54px;
+  font-family: 'Rock Salt', cursive;
+  animation: rollIn 2s ;
+}
+
 input{
   background-color: rgb(0, 0, 0);
   opacity: .9;
@@ -103,8 +111,11 @@ input{
   padding: .75em;
   border: none;
   border-radius: 2px;
-  padding-left: 30px;
-padding-right:30px;
+  padding-left: 70px;
+  padding-right:70px;
+  padding-top: 15px;
+  padding-bottom:15px;
+  font-size: 18px;
 }
 
 /* About Styling */
